Adding simple comment tag in the HTML

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head>
+	<!--
+	  the siumpel 
+	-->
 	<title>A simple HTML file</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
