neew changes in the simple html file from simple.html

--- a/simple.html
+++ b/simple.html
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just Some content in the simple HTML file from the master branch after rebasing
+			Just Some content in the simple HTML file
 		</p>
 	</main>
 	<footer class="container">
