--- a/simple.html
+++ b/simple.html
@@ -2,9 +2,9 @@
 <head>
 	<!--
 	  the siumpel 
-		this is the simple change in the simple.html from master
+		this is the simple change in the simple.html from master and change after creating the newfeature branch and again from master branch
 	-->
-	<title>A simple realchange HTML file</title>
+	<title>A simple realchange from master branch HTML file</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just Some content in the simple HTML file
+			Just Some content in the simple HTML file from the master branch after rebasing
 		</p>
 	</main>
 	<footer class="container">
