commiting changes in the newfeature branch

--- a/simple.html
+++ b/simple.html
@@ -2,9 +2,9 @@
 <head>
 	<!--
 	  the siumpel 
-		this is the simple change in the simple.html from master and change after creating the newfeature branch and again from master branch
+		this is the simple change in the simple.html from master and change after creating the newfeature branch and again from master branch and the changes again in the newfeature branch
 	-->
-	<title>A simple realchange from master branch HTML file</title>
+	<title>A simple realchange from master branch HTML file BYE BYE</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
