local: updaing the simple.html copyrights is important

--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Genesys 2014</p>
+		<p>&copy; Genesys 2014 making some changes in the master branch</p>
 	</footer>
 </body>
 </html>
