Commiting the simple.html file

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	  the siumpel 
 		this is the simple change in the simple.html from master and change after creating the newfeature branch and again from master branch and the changes again in the newfeature branch
 	-->
-	<title>A simple realchange from master branch HTML file BYE BYE</title>
+	<title>Making changes for the stash command</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
