this is the final changes for the branch in the stash

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	  the siumpel 
 		this is the simple change in the simple.html from master and change after creating the newfeature branch and again from master branch and the changes again in the newfeature branch
 	-->
-	<title>Making changes for the stash command and finding the date again for the stash command furthur for the stash example in the branch 1 </title>
+	<title>Making changes for the stash command and finding the date again for the stash command furthur for the stash example in the branch 1 foir EXMPLE2 </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
